changes the flex

--- a/indexExFlex.html
+++ b/indexExFlex.html
@@ -14,7 +14,7 @@
         <div class="menuItem">Courses</div>
         <div class="menuItem">Forum</div>
         <div class="menuItem">Learning Paths</div>
-        <div class="menuItem">Contact</div>
+        <div class="menuItem">Contacts</div>
       </div>
     </div>
   </body>
